--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <h1> Josué Centurión </h1>
     </header>
     <main>
-        <h2>WDD 230 Assigment Portal </h2>
+        <div class="assing_portal">
+            <h2>WDD 230: Assigment Portal </h2>
+        </div>
+        
         <hr>
         <ul class="list">
             <li>Lesson 02: <a href=""> Title </a></li>
