--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/me.jpeg" alt=" ME ( Josué Centurión )">
         </div>
 
-        <h1> Josué Centurión </h1>
+        <h1> Josué B. Centurión </h1>
     </header>
     <main>
         <div class="assing_portal">
