--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is my Assigment Portal ( Josué Centurión ) for the WDD 230 (Web Frontend Development) Course at Brigham Young University - Idaho. This course is part of the process to complete the Web & Computer Programming certificate  ">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Josué Centurión's Assigment Portal</title>
 </head>
@@ -23,7 +24,7 @@
         <div class="assing_portal">
             <h2>WDD 230: Assigment Portal </h2>
         </div>
-        
+
         <hr>
         <ul class="list">
             <li>Lesson 02: <a href=""> Title </a></li>
@@ -39,7 +40,7 @@
         </ul>
 
         <hr>
-      
+
     </main>
     <footer>
         <p id="year"></p>
