css medium and small media queries

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description"
         content="This is my Assigment Portal ( Josué Centurión ) for the WDD 230 (Web Frontend Development) Course at Brigham Young University - Idaho. This course is part of the process to complete the Web & Computer Programming certificate  ">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    
     <title>Josué Centurión's Assigment Portal</title>
 </head>
 
