media queries & adding images, adjusting JS

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -23,14 +23,14 @@
     <main>
         <section>
             <div class="principle">
-                <h3>Principle</h2>
+                <h3>White Space and Clean Design</h2>
             </div>
             <div class="company_name"> 
-                <p>Company name</p>
-                <p><a href="">Company name</a></p>
+                <p>Pathway Connect</p>
+                <p><a href="https://www.byupathway.org/pathwayconnect">www.byupathway.org</a></p>
             </div>
             <div class="mobile_view">
-                <img src="./images/pathway.jpg" alt="">
+                <img src="./images/pathway.jpg" alt="Pathway Connect main section screenshot">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec quam ligula. Sed non lacus eleifend, congue est non, tempus diam. Maecenas sodales sagittis odio. Ut ac nunc posuere lectus egestas faucibus congue quis dui. Suspendisse tempus augue vel ligula ullamcorper commodo. Donec eleifend urna ut urna consectetur, sed commodo lectus viverra. Duis ultrices suscipit nibh id accumsan. Sed sit amet elit fermentum tortor tincidunt interdum. Cras in libero ut est sollicitudin volutpat sit amet venenatis enim. Donec vel diam posuere, tristique quam quis, ultricies enim.
 
                     Sed pulvinar tristique sapien, in hendrerit justo tempus id. Proin eleifend massa vitae dolor sollicitudin, sed dapibus neque laoreet. Etiam cursus nisi et eros posuere scelerisque. Integer bibendum, enim eu tristique bibendum, massa lectus tempus dolor, id mollis magna nisi tincidunt arcu. Vestibulum vitae convallis nunc. Sed sed velit sapien. Fusce et leo leo. Aenean fringilla tincidunt maximus. In nibh nisi, condimentum nec pharetra non, mollis eget dui. Phasellus dictum vestibulum lacus, non posuere nunc lobortis ac.</p>
@@ -38,14 +38,14 @@
         </section>
         <section>
             <div class="principle">
-                <h3>Principle</h2>
+                <h3>Contrast</h2>
             </div>
             <div class="company_name"> 
-                <p>Company name</p>
-                <p><a href="">Company name</a></p>
+                <p>Whipsaw</p>
+                <p><a href="https://whipsaw.com/">https://whipsaw.com/</a></p>
             </div>
             <div class="mobile_view">
-                <img src="./images/pathway.jpg" alt="">
+                <img src="./images/whipsaw.jpg" alt="Whipsaw main section screenshot">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec quam ligula. Sed non lacus eleifend, congue est non, tempus diam. Maecenas sodales sagittis odio. Ut ac nunc posuere lectus egestas faucibus congue quis dui. Suspendisse tempus augue vel ligula ullamcorper commodo. Donec eleifend urna ut urna consectetur, sed commodo lectus viverra. Duis ultrices suscipit nibh id accumsan. Sed sit amet elit fermentum tortor tincidunt interdum. Cras in libero ut est sollicitudin volutpat sit amet venenatis enim. Donec vel diam posuere, tristique quam quis, ultricies enim.
 
                     Sed pulvinar tristique sapien, in hendrerit justo tempus id. Proin eleifend massa vitae dolor sollicitudin, sed dapibus neque laoreet. Etiam cursus nisi et eros posuere scelerisque. Integer bibendum, enim eu tristique bibendum, massa lectus tempus dolor, id mollis magna nisi tincidunt arcu. Vestibulum vitae convallis nunc. Sed sed velit sapien. Fusce et leo leo. Aenean fringilla tincidunt maximus. In nibh nisi, condimentum nec pharetra non, mollis eget dui. Phasellus dictum vestibulum lacus, non posuere nunc lobortis ac.</p>
@@ -53,14 +53,14 @@
         </section>
         <section>
             <div class="principle">
-                <h3>Principle</h2>
+                <h3>Repetition</h2>
             </div>
             <div class="company_name"> 
                 <p>Company name</p>
                 <p><a href="">Company name</a></p>
             </div>
             <div class="mobile_view">
-                <img src="./images/pathway.jpg" alt="">
+                <img src="./images/facebook.jpg" alt="facebook main section screenshot">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec quam ligula. Sed non lacus eleifend, congue est non, tempus diam. Maecenas sodales sagittis odio. Ut ac nunc posuere lectus egestas faucibus congue quis dui. Suspendisse tempus augue vel ligula ullamcorper commodo. Donec eleifend urna ut urna consectetur, sed commodo lectus viverra. Duis ultrices suscipit nibh id accumsan. Sed sit amet elit fermentum tortor tincidunt interdum. Cras in libero ut est sollicitudin volutpat sit amet venenatis enim. Donec vel diam posuere, tristique quam quis, ultricies enim.
 
                     Sed pulvinar tristique sapien, in hendrerit justo tempus id. Proin eleifend massa vitae dolor sollicitudin, sed dapibus neque laoreet. Etiam cursus nisi et eros posuere scelerisque. Integer bibendum, enim eu tristique bibendum, massa lectus tempus dolor, id mollis magna nisi tincidunt arcu. Vestibulum vitae convallis nunc. Sed sed velit sapien. Fusce et leo leo. Aenean fringilla tincidunt maximus. In nibh nisi, condimentum nec pharetra non, mollis eget dui. Phasellus dictum vestibulum lacus, non posuere nunc lobortis ac.</p>
@@ -69,7 +69,7 @@
     </main>
     <footer>
         <p id="year"></p>
-        <p id="updated"></p>
+
     </footer>
 
     <script src="scripts/main.js"></script>
