--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -56,8 +56,8 @@
                 <h3>Repetition</h2>
             </div>
             <div class="company_name"> 
-                <p>Company name</p>
-                <p><a href="">Company name</a></p>
+                <p>Binance</p>
+                <p><a href="https://www.binance.com/en">https://www.binance.com/en</a></p>
             </div>
             <div class="mobile_view">
                 <img src="./images/binance.jpg" alt="facebook main section screenshot">
