--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -67,9 +67,11 @@
             </div>
         </section>        
     </main>
-    <footer>
-        <p id="year"></p>
 
+    <footer>
+        <div>
+            <p id="year"></p>
+        </div>
     </footer>
 
     <script src="scripts/main.js"></script>
