--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Web site to demostrate design principles">
+    <meta name="description" content="Web site to demostrate design principles">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
-    
+
     <title>Design Principles</title>
 </head>
 
@@ -25,47 +24,78 @@
             <div class="principle">
                 <h3>White Space and Clean Design</h3>
             </div>
-            <div class="company_name"> 
-                <p>Pathway Connect</p>
+            <div class="company_name">
+                <p> <strong> Pathway Connect </strong></p>
                 <p><a href="https://www.byupathway.org/pathwayconnect">www.byupathway.org</a></p>
             </div>
             <div class="mobile_view">
                 <img src="./images/pathway.jpg" alt="Pathway Connect main section screenshot">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec quam ligula. Sed non lacus eleifend, congue est non, tempus diam. Maecenas sodales sagittis odio. Ut ac nunc posuere lectus egestas faucibus congue quis dui. Suspendisse tempus augue vel ligula ullamcorper commodo. Donec eleifend urna ut urna consectetur, sed commodo lectus viverra. Duis ultrices suscipit nibh id accumsan. Sed sit amet elit fermentum tortor tincidunt interdum. Cras in libero ut est sollicitudin volutpat sit amet venenatis enim. Donec vel diam posuere, tristique quam quis, ultricies enim.
+                <p><strong> White spaces </strong> are an important part of a clear and clean design in Web Development.
+                    The human eye can understand better the content and gives a sense of simplicity and sophisticated
+                    lucidity.<br> <br>
+                    It's considered best practices the following: </p>
+                <ul>
+                    <li> Max 50 - 60 characters per line </li>
+                    <li> 2 - 3 fonts Max </li>
+                    <li> Bold the important idea </li>
+                    <li> Clear images and spacing. </li>
+                    <li> High-quality images </li>
+                    <li> Correct use of padding and borders </li>
+                    <li> Aligned grids and no extra spaces </li>
 
-                    Sed pulvinar tristique sapien, in hendrerit justo tempus id. Proin eleifend massa vitae dolor sollicitudin, sed dapibus neque laoreet. Etiam cursus nisi et eros posuere scelerisque. Integer bibendum, enim eu tristique bibendum, massa lectus tempus dolor, id mollis magna nisi tincidunt arcu. Vestibulum vitae convallis nunc. Sed sed velit sapien. Fusce et leo leo. Aenean fringilla tincidunt maximus. In nibh nisi, condimentum nec pharetra non, mollis eget dui. Phasellus dictum vestibulum lacus, non posuere nunc lobortis ac.</p>
+                </ul>
             </div>
         </section>
         <section>
             <div class="principle">
                 <h3>Contrast</h3>
             </div>
-            <div class="company_name"> 
-                <p>Whipsaw</p>
+            <div class="company_name">
+                <p> <strong> Whipsaw </strong></p>
                 <p><a href="https://whipsaw.com/">https://whipsaw.com/</a></p>
             </div>
             <div class="mobile_view">
                 <img src="./images/whipsaw.jpg" alt="Whipsaw main section screenshot">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec quam ligula. Sed non lacus eleifend, congue est non, tempus diam. Maecenas sodales sagittis odio. Ut ac nunc posuere lectus egestas faucibus congue quis dui. Suspendisse tempus augue vel ligula ullamcorper commodo. Donec eleifend urna ut urna consectetur, sed commodo lectus viverra. Duis ultrices suscipit nibh id accumsan. Sed sit amet elit fermentum tortor tincidunt interdum. Cras in libero ut est sollicitudin volutpat sit amet venenatis enim. Donec vel diam posuere, tristique quam quis, ultricies enim.
-
-                    Sed pulvinar tristique sapien, in hendrerit justo tempus id. Proin eleifend massa vitae dolor sollicitudin, sed dapibus neque laoreet. Etiam cursus nisi et eros posuere scelerisque. Integer bibendum, enim eu tristique bibendum, massa lectus tempus dolor, id mollis magna nisi tincidunt arcu. Vestibulum vitae convallis nunc. Sed sed velit sapien. Fusce et leo leo. Aenean fringilla tincidunt maximus. In nibh nisi, condimentum nec pharetra non, mollis eget dui. Phasellus dictum vestibulum lacus, non posuere nunc lobortis ac.</p>
+                <p> It's important in <strong> Contrast </strong>to be clear with the difference between the foreground
+                    and background.
+                    <br> <br> Here there are best practices good to apply: <br>
+                </p>
+                <ul>
+                    <li>Visual Hierarchy</li>
+                    <li>Font sizes </li>
+                    <li>Image and content placement</li>
+                    <li>Contrast Ratio of at least 4.5:1</li>
+                    <li>Large-scale text and images: 3:1;</li>
+                    <li>Text or images part of an inactive user interface has no Contrast</li>
+                    <li>In case of Logotypes: No contrast </li>
+                </ul>
             </div>
         </section>
         <section>
             <div class="principle">
                 <h3>Repetition</h3>
             </div>
-            <div class="company_name"> 
-                <p>Binance</p>
+            <div class="company_name">
+                <p> <strong> Binance </strong></p>
                 <p><a href="https://www.binance.com/en">https://www.binance.com/en</a></p>
             </div>
             <div class="mobile_view">
                 <img src="./images/binance.jpg" alt="facebook main section screenshot">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec quam ligula. Sed non lacus eleifend, congue est non, tempus diam. Maecenas sodales sagittis odio. Ut ac nunc posuere lectus egestas faucibus congue quis dui. Suspendisse tempus augue vel ligula ullamcorper commodo. Donec eleifend urna ut urna consectetur, sed commodo lectus viverra. Duis ultrices suscipit nibh id accumsan. Sed sit amet elit fermentum tortor tincidunt interdum. Cras in libero ut est sollicitudin volutpat sit amet venenatis enim. Donec vel diam posuere, tristique quam quis, ultricies enim.
-
-                    Sed pulvinar tristique sapien, in hendrerit justo tempus id. Proin eleifend massa vitae dolor sollicitudin, sed dapibus neque laoreet. Etiam cursus nisi et eros posuere scelerisque. Integer bibendum, enim eu tristique bibendum, massa lectus tempus dolor, id mollis magna nisi tincidunt arcu. Vestibulum vitae convallis nunc. Sed sed velit sapien. Fusce et leo leo. Aenean fringilla tincidunt maximus. In nibh nisi, condimentum nec pharetra non, mollis eget dui. Phasellus dictum vestibulum lacus, non posuere nunc lobortis ac.</p>
+                <p> The principle of <strong> Repetition </strong> teaches us how important is to be consistent in our
+                    structure,layout, and schemes.
+                    <br> <br> Some of the best practices of Repetition are: <br>
+                </p>
+                <ul>
+                    <li>Consistency in the use of colors </li>
+                    <li>Font sizes </li>
+                    <li>Abundant use of logo and brand</li>
+                    <li>Focus on strengthening identity in styling</li>
+                    <li>Patterns: design elements working in unison</li>
+                    <li>Consistent white spacing</li>
+                    <li>Effective use of a pattern of Contrasts</li>
+                </ul>
             </div>
-        </section>        
+        </section>
     </main>
 
     <footer>
