Adjusting font and HTML

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web site to demostrate design principles">
+    <meta name="description" content="Web site to demostrate design principles. It demostrate 3 examples of companies that apply these principles ">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -80,9 +80,9 @@
                 <p><a href="https://www.binance.com/en">https://www.binance.com/en</a></p>
             </div>
             <div class="mobile_view">
-                <img src="./images/binance.jpg" alt="facebook main section screenshot">
-                <p> The principle of <strong> Repetition </strong> teaches us how important is to be consistent in our
-                    structure,layout, and schemes.
+                <img src="./images/binance.jpg" alt="Binance main section screenshot">
+                <p> The principle of <strong> Repetition </strong>teaches us how important is to be consistent in our
+                    structure,layout,and schemes.
                     <br> <br> Some of the best practices of Repetition are: <br>
                 </p>
                 <ul>
