--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is my Assigment Portal ( Josué Centurión ) for the WDD 230 (Web Frontend Development) Course at Brigham Young University - Idaho. This course is part of the process to complete the Web & Computer Programming certificate  ">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <title>Josué Centurión's Assigment Portal</title>
 </head>
 
 <body>
     <header>
-        <div class="me_image">
+        <div class="me-image">
             <img src="images/me.jpeg" alt=" ME ( Josué Centurión )">
         </div>
 
         <h1> Josué B. Centurión </h1>
     </header>
     <main>
-        <div class="assing_portal">
+        <div class="assing-portal">
             <h2>WDD 230: Assigment Portal </h2>
         </div>
 
