--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web site to demostrate design principles. It demostrate 3 examples of companies that apply these principles ">
+    <meta name="description" content="Website to demonstrate design principles. It demonstrates 3 examples of companies that apply these principles.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
 
-    <title>Design Principles</title>
+    <title>Design Principles in Web Development/title>
 </head>
 
 <body>
@@ -24,11 +24,11 @@
             <div class="principle">
                 <h3>White Space and Clean Design</h3>
             </div>
-            <div class="company_name">
+            <div class="company-name">
                 <p> <strong> Pathway Connect </strong></p>
                 <p><a href="https://www.byupathway.org/pathwayconnect">www.byupathway.org</a></p>
             </div>
-            <div class="mobile_view">
+            <div class="mobile-view">
                 <img src="./images/pathway.jpg" alt="Pathway Connect main section screenshot">
                 <p><strong> White spaces </strong> are an important part of a clear and clean design in Web Development.
                     The human eye can understand better the content and gives a sense of simplicity and sophisticated
@@ -50,11 +50,11 @@
             <div class="principle">
                 <h3>Contrast</h3>
             </div>
-            <div class="company_name">
+            <div class="company-name">
                 <p> <strong> Whipsaw </strong></p>
                 <p><a href="https://whipsaw.com/">https://whipsaw.com/</a></p>
             </div>
-            <div class="mobile_view">
+            <div class="mobile-view">
                 <img src="./images/whipsaw.jpg" alt="Whipsaw main section screenshot">
                 <p> It's important in <strong> Contrast </strong>to be clear with the difference between the foreground
                     and background.
@@ -75,11 +75,11 @@
             <div class="principle">
                 <h3>Repetition</h3>
             </div>
-            <div class="company_name">
+            <div class="company-name">
                 <p> <strong> Binance </strong></p>
                 <p><a href="https://www.binance.com/en">https://www.binance.com/en</a></p>
             </div>
-            <div class="mobile_view">
+            <div class="mobile-view">
                 <img src="./images/binance.jpg" alt="Binance main section screenshot">
                 <p> The principle of <strong> Repetition </strong>teaches us how important is to be consistent in our
                     structure,layout,and schemes.
