--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <hr>
         <ul class="list">
-            <li>Lesson 02: <a href=""> Title </a></li>
-            <li>Lesson 03: <a href=""> Title </a></li>
+            <li>Lesson 02: <a href="https://josuebce.github.io/wdd230/lesson2/design-principles.html"> Title </a></li>
+            <li>Lesson 03: <a href=""> Design Principles </a></li>
             <li>Lesson 04: <a href=""> Title </a></li>
             <li>Lesson 05: <a href=""> Title </a></li>
             <li>Lesson 06: <a href=""> Title </a></li>
