--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Website to demonstrate design principles. It demonstrates 3 examples of companies that apply these principles.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
 
-    <title>Design Principles in Web Development/title>
+    <title>Design Principles in Web Development</title>
 </head>
 
 <body>
@@ -103,7 +104,6 @@
             <p id="year"></p>
         </div>
     </footer>
-
     <script src="scripts/main.js"></script>
 </body>
 
