adding pages, css, and almost everything

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,39 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/lesson3/styles/styles.css">
+    <link rel="stylesheet" href="/wdd230/lesson3/styles/small.css">
+    <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
     <title>We'll Chamber</title>
 </head>
 <body>
     <header>
-        <img src="/lesson3/images/logo.jpg" alt="Chamber logo">
+        <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
         <div class="name">
             <h1>We'll Chamber</h1>
         </div>
     </header>
     <nav> 
-    <p><a href="">Home</a></p>
-    <p><a href="">Target Audience</a></p>
-    <p><a href="">Color Scheme</a></p>
-    <p><a href="">Typography</a></p>    
+    <p><a href="index.html">Home</a></p>
+    <p><a href="target-audience.html">Target Audience</a></p>
+    <p><a href="color-shceme.html">Color Scheme</a></p>
+    <p><a href="typography.html">Typography</a></p>    
     </nav>
     <main>
         <h2>Purpose</h3>
-        <h3>1)Provide a meeting space 2)Cultivate , 3) dsasdas , 4)dassad </h3>
-        <h4>sdasdasdas</h4>
-        <p>adasdlkasdklasjdñasjdñkkasjdñkasdj</p>
-        <h4>sdasdasdas</h4>
-        <p>jdhasjkdhlasjdhalsjkdhaslkdjhasldhas</p>
-        <h4>sdasdasdas</h4>
-        <p>adasdlkasdklasjdñasjdñkkasjdñkasdj</p>
-        <h4>sdasdasdas</h4>
-        <p>jdhasjkdhlasjdhalsjkdhaslkdjhasldhas</p>            
-
+        <h3>1)Provide business contacts, 2) Acquire customer referrals, 3) Bring credibility to businesses, 4)Bring Networking opportunities</h3>
+        <h4>Provide business contacts</h4>
+        <p>For any business is essential to create connections with potential customers and promoters. It's a bidimensional benefit to get to know through an online community.</p>
+        <h4>Adquire Customers Referrals</h4>
+        <p>For any business is essential to create connections with potential customers and promoters. It's a bidimensional benefit to get to know through an online community.</p>
+        <h4>Bring credibility to businesses</h4>
+        <p>None usually will buy products from suspicious places. The Customers need the assurance of quality and branding of what they are consuming, that's how this kind of places provide the perfect opportunity to get more people to know your bussiness</p>
+        <h4>Bring Networking opportunities</h4>
+        <p>We are social beings, and it's key to creating strong chains of support and fidelity in customers to work through networking. More people means more opportunities to innovate, reinvent and strengthen your business' status in the community. </p>            
+        <h2>Domain</h2>
         <p>www.wellchamber.org</p>
     </main>
     <footer>
-        &copy;<span id="year"></span> | Josue B. Centurion | Argentina
+        &copy;<span id="year"></span>|Josue B. Centurion|Argentina
     </footer>
-    <script src="/lesson3/scripts/index.js"></script>
+    <script src="/wdd230/lesson3/scripts/index.js"></script>
 </body>
 </html>
