adding pallete of colors img

--- a/lesson3/color-shceme.html
+++ b/lesson3/color-shceme.html
@@ -69,6 +69,8 @@
                 <td>Sample</td>
             </tr>
         </table>
+            <img src="/wdd230/lesson3/images/palette.png" alt="">
+        
     </main>
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
