--- a/lesson3/color-shceme.html
+++ b/lesson3/color-shceme.html
@@ -70,7 +70,8 @@
             </tr>
         </table>
             <img src="/wdd230/lesson3/images/palette.png" alt="">
-        
+            <h3>Palette Gradient</h3>
+            <img src="/wdd230/lesson3/images/gradient.png" alt="">
     </main>
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
