--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -16,10 +16,10 @@
         </div>
     </header>
     <nav> 
-    <p><a href="index.html">Home</a></p>
-    <p><a href="target-audience.html">Target Audience</a></p>
-    <p><a href="color-shceme.html">Color Scheme</a></p>
-    <p><a href="typography.html">Typography</a></p>    
+    <div><a href="index.html">Home</a></div>
+    <div><a href="target-audience.html">Target Audience</a></div>
+    <div><a href="color-shceme.html">Color Scheme</a></div>
+    <div><a href="typography.html">Typography</a></div>    
     </nav>
     <main>
         <h2>Purpose</h3>
