--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -16,10 +16,10 @@
         </div>
     </header>
     <nav> 
-    <p><a href="index.html">Home</a></p>
-    <p><a href="target-audience.html">Target Audience</a></p>
-    <p><a href="color-shceme.html">Color Scheme</a></p>
-    <p><a href="typography.html">Typography</a></p>    
+        <div><a href="index.html">Home</a></div>
+        <div><a href="target-audience.html">Target Audience</a></div>
+        <div><a href="color-shceme.html">Color Scheme</a></div>
+        <div><a href="typography.html">Typography</a></div>        
     </nav>
     <main class="color-sch-main">
         <h2>Typography</h3>
@@ -69,6 +69,8 @@
                     <td>Sample</td>
                 </tr>
             </table>
+            <br>
+            <h4>FONTS: <br> <strong>Roboto Mono</strong> </h4>
             <br>
             <h1>(Chamber's name)</h1>
             <p id="pri-nav">(Primary Navigation Prototype)</p>
