--- a/lesson3/color-shceme.html
+++ b/lesson3/color-shceme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
     <title>We'll Chamber</title>
 </head>
+
 <body>
     <header>
         <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
@@ -15,60 +17,60 @@
             <h1>We'll Chamber</h1>
         </div>
     </header>
-    <nav> 
-    <p><a href="index.html">Home</a></p>
-    <p><a href="target-audience.html">Target Audience</a></p>
-    <p><a href="color-shceme.html">Color Scheme</a></p>
-    <p><a href="typography.html">Typography</a></p>    
+    <nav>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="target-audience.html">Target Audience</a></div>
+        <div><a href="color-shceme.html">Color Scheme</a></div>
+        <div><a href="typography.html">Typography</a></div>
     </nav>
     <main class="color-sch-main">
         <h2>Color Scheme</h3>
-        <h3>These are the carefull selected elements for each color in the We'll Chamber Website</h3>
-        <table>
-            <tr>
-                <th>Site Element</th>
-                <th>Size</th>
-                <th>Color</th>
-                <th>Sample Text</th>
-            </tr>
-          
-            <tr>
-                <td>Primary Navigation</td>
-                <td>30px</td>
-                <td>#f9fafa</td>
-                <td>Sample</td>
-            </tr>
-            <tr>
-                <td>Footer Navigation</td>
-                <td>16px</td>
-                <td>#ffffff</td>
-                <td>Sample</td>
-            </tr>
-            <tr>
-                <td>Heading 1 (h1)</td>
-                <td>2em</td>
-                <td>#ffffff</td>
-                <td>Sample</td>
-            </tr>
-            <tr>
-                <td>Heading 2 (h2)</td>
-                <td>1.5em</td>
-                <td>#fcba03</td>
-                <td>Sample</td>
-            </tr>
-            <tr>
-                <td>Heading 3 (h3)</td>
-                <td>17.55px</td>
-                <td>#ffffff</td>
-                <td>Sample</td>
-            </tr>
-            <tr>
-                <td>Paragraph Text (p)</td>
-                <td>16px</td>
-                <td>#000000</td>
-                <td>Sample</td>
-            </tr>
-        </table>
+            <h3>These are the carefull selected elements for each color in the We'll Chamber Website</h3>
+            <table>
+                <tr>
+                    <th>Site Element</th>
+                    <th>Size</th>
+                    <th>Color</th>
+                    <th>Sample Text</th>
+                </tr>
+
+                <tr>
+                    <td>Primary Navigation</td>
+                    <td>30px</td>
+                    <td>#f9fafa</td>
+                    <td>Sample</td>
+                </tr>
+                <tr>
+                    <td>Footer Navigation</td>
+                    <td>16px</td>
+                    <td>#ffffff</td>
+                    <td>Sample</td>
+                </tr>
+                <tr>
+                    <td>Heading 1 (h1)</td>
+                    <td>2em</td>
+                    <td>#ffffff</td>
+                    <td>Sample</td>
+                </tr>
+                <tr>
+                    <td>Heading 2 (h2)</td>
+                    <td>1.5em</td>
+                    <td>#fcba03</td>
+                    <td>Sample</td>
+                </tr>
+                <tr>
+                    <td>Heading 3 (h3)</td>
+                    <td>17.55px</td>
+                    <td>#ffffff</td>
+                    <td>Sample</td>
+                </tr>
+                <tr>
+                    <td>Paragraph Text (p)</td>
+                    <td>16px</td>
+                    <td>#000000</td>
+                    <td>Sample</td>
+                </tr>
+            </table>
             <img src="/wdd230/lesson3/images/palette.png" alt="">
             <h3>Palette Gradient</h3>
             <img src="/wdd230/lesson3/images/gradient.png" alt="">
@@ -78,4 +80,5 @@
     </footer>
     <script src="/wdd230/lesson3/scripts/index.js"></script>
 </body>
+
 </html>
