--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
     <title>We'll Chamber</title>
 </head>
+
 <body>
     <header>
         <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
@@ -15,32 +17,34 @@
             <h1>We'll Chamber</h1>
         </div>
     </header>
-    <nav> 
-    <p><a href="index.html">Home</a></p>
-    <p><a href="target-audience.html">Target Audience</a></p>
-    <p><a href="color-shceme.html">Color Scheme</a></p>
-    <p><a href="typography.html">Typography</a></p>    
+    <nav>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="target-audience.html">Target Audience</a></div>
+        <div><a href="color-shceme.html">Color Scheme</a></div>
+        <div><a href="typography.html">Typography</a></div>
     </nav>
     <main>
         <h2>Target Audience</h3>
-        <h3>Small businesses, their affiliates, and potential customers</h3>
-        <h4>Personas</h4>
-        <p>Business owners, management employees, marketing staff, or similar positions</p>
-        <p>Potential customers or prospective</p>
-        <p>Potential new member of the Chamber</p>
-        <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p>
-        <h4>Scenarios</h4>
-        <p><strong>1)</strong> A person interested in knowing more about businesses part of the chamber of commerce</p>
-        <p><strong>2)</strong> Prospective new member interested in being part of the Chamber</p>
-        <p><strong>3)</strong> Member of the Chamber interested in knowing about news in this community</p>
-        <p><strong>4)</strong> Interested person in adding value to the community.</p>
-        <p><strong>5)</strong> A member of the community wants to know about the events in the chamber</p>
-        <p><strong>6)</strong> Business owners seeking help or support in the chamber's services</p>
-       
+            <h3>Small businesses, their affiliates, and potential customers</h3>
+            <h4>Personas</h4>
+            <p>Business owners, management employees, marketing staff, or similar positions</p>
+            <p>Potential customers or prospective, male or female, ages 20-65 interested in knowing about Chamber
+                benefits </p>
+            <!--         <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p> -->
+            <h4>Scenarios</h4>
+            <p><strong>1)</strong> A person interested in knowing more about businesses part of the chamber of commerce
+            </p>
+            <p><strong>2)</strong> Prospective new member interested in being part of the Chamber</p>
+            <p><strong>3)</strong> Member of the Chamber interested in knowing about news in this community</p>
+            <p><strong>4)</strong> Interested person in adding value to the community.</p>
+            <p><strong>5)</strong> A member of the community wants to know about the events in the chamber</p>
+            <p><strong>6)</strong> Business owners seeking help or support in the chamber's services</p>
+
     </main>
     <footer>
         &copy;<span id="year"></span&copy;<span id="year"></span>|Josue B. Centurion|Argentina
     </footer>
     <script src="/wdd230/lesson3/scripts/index.js"></script>
 </body>
+
 </html>
