--- a/lesson3/color-shceme.html
+++ b/lesson3/color-shceme.html
@@ -71,9 +71,9 @@
                     <td>Sample</td>
                 </tr>
             </table>
-            <img src="/lesson3/images/palette.png" alt="">
+            <img src="/lesson3/images/palette.png" alt="Palette of colors">
             <h3>Palette Gradient</h3>
-            <img src="/lesson3/images/gradient.png" alt="">
+            <img src="/lesson3/images/gradient.png" alt="Gradient of the Palette of colors">
     </main>
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
