--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/lesson3/styles/small.css">
-    <link rel="stylesheet" href="/lesson3/styles/medium.css">
+    <link rel="stylesheet" href="/wdd230/lesson3/styles/small.css">
+    <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
     <title>We'll Chamber</title>
 </head>
 <body>
     <header>
-        <img src="/lesson3/images/logo.jpg" alt="Chamber logo">
+        <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
         <div class="name">
             <h1>We'll Chamber</h1>
         </div>
@@ -38,6 +38,6 @@
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
     </footer>
-    <script src="/lesson3/scripts/index.js"></script>
+    <script src="/wdd230/lesson3/scripts/index.js"></script>
 </body>
 </html>
