adding description and optimizing images

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="This website is a site-plan for a Chamber of Commerce called Let's Chamber. It includes the styles, typography and colors that will be included in this project. It also includes the Purpose and target-audience for this website." />
     <link rel="stylesheet" href="/wdd230/lesson3/styles/small.css">
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
     <title>We'll Chamber</title>
 </head>
 
@@ -25,20 +29,20 @@
     </nav>
     <main>
         <h2>Target Audience</h2>
-            <h3>Small businesses, their affiliates, and potential customers</h3>
-            <h4>Personas</h4>
-            <p>Business owners, management employees, marketing staff, or similar positions</p>
-            <p>Potential customers or prospective, male or female, ages 20-65 interested in knowing about Chamber
-                benefits </p>
-            <!--         <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p> -->
-            <h4>Scenarios</h4>
-            <p><strong>1)</strong> A person interested in knowing more about businesses part of the chamber of commerce
-            </p>
-            <p><strong>2)</strong> Prospective new member interested in being part of the Chamber</p>
-            <p><strong>3)</strong> Member of the Chamber interested in knowing about news in this community</p>
-            <p><strong>4)</strong> Interested person in adding value to the community.</p>
-            <p><strong>5)</strong> A member of the community wants to know about the events in the chamber</p>
-            <p><strong>6)</strong> Business owners seeking help or support in the chamber's services</p>
+        <h3>Small businesses, their affiliates, and potential customers</h3>
+        <h4>Personas</h4>
+        <p>Business owners, management employees, marketing staff, or similar positions</p>
+        <p>Potential customers or prospective, male or female, ages 20-65 interested in knowing about Chamber
+            benefits </p>
+        <!--         <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p> -->
+        <h4>Scenarios</h4>
+        <p><strong>1)</strong> A person interested in knowing more about businesses part of the chamber of commerce
+        </p>
+        <p><strong>2)</strong> Prospective new member interested in being part of the Chamber</p>
+        <p><strong>3)</strong> Member of the Chamber interested in knowing about news in this community</p>
+        <p><strong>4)</strong> Interested person in adding value to the community.</p>
+        <p><strong>5)</strong> A member of the community wants to know about the events in the chamber</p>
+        <p><strong>6)</strong> Business owners seeking help or support in the chamber's services</p>
 
     </main>
     <footer>
