--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="This website is a site-plan for a Chamber of Commerce called Let's Chamber. It includes the styles, typography and colors that will be included in this project. It also includes the Purpose and target-audience for this website." />
     <link rel="stylesheet" href="/wdd230/lesson3/styles/small.css">
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
     <title>We'll Chamber</title>
 </head>
+
 <body>
     <header>
         <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
@@ -15,73 +21,75 @@
             <h1>We'll Chamber</h1>
         </div>
     </header>
-    <nav> 
+    <nav>
         <div><a href="index.html">Home</a></div>
         <div><a href="target-audience.html">Target Audience</a></div>
         <div><a href="color-shceme.html">Color Scheme</a></div>
-        <div><a href="typography.html">Typography</a></div>        
+        <div><a href="typography.html">Typography</a></div>
     </nav>
     <main class="color-sch-main">
         <h2>Typography</h2>
-            <h3>These fonts are applied with the purpose of showing proffessionality and a formal style for the Chamber of Commerce.</h3>
-            <table>
-                <tr>
-                    <th>Site Element</th>
-                    <th>Size</th>
-                    <th>Color</th>
-                    <th>Sample Text</th>
-                </tr>
-              
-                <tr>
-                    <td>Primary Navigation</td>
-                    <td>30px</td>
-                    <td>#f9fafa</td>
-                    <td>Sample</td>
-                </tr>
-                <tr>
-                    <td>Footer Navigation</td>
-                    <td>16px</td>
-                    <td>#ffffff</td>
-                    <td>Sample</td>
-                </tr>
-                <tr>
-                    <td>Heading 1 (h1)</td>
-                    <td>2em</td>
-                    <td>#ffffff</td>
-                    <td>Sample</td>
-                </tr>
-                <tr>
-                    <td>Heading 2 (h2)</td>
-                    <td>1.5em</td>
-                    <td>#fcba03</td>
-                    <td>Sample</td>
-                </tr>
-                <tr>
-                    <td>Heading 3 (h3)</td>
-                    <td>17.55px</td>
-                    <td>#ffffff</td>
-                    <td>Sample</td>
-                </tr>
-                <tr>
-                    <td>Paragraph Text (p)</td>
-                    <td>16px</td>
-                    <td>#000000</td>
-                    <td>Sample</td>
-                </tr>
-            </table>
-            <br>
-            <h4>FONTS: <br> <strong>Roboto Mono</strong> </h4>
-            <br>
-            <h1>(Chamber's name)</h1>
-            <p id="pri-nav">(Primary Navigation Prototype)</p>
-            <h2>Subtitle example</h2>
-            <h3>Description of the main section example</h3>
-            <p>This is how a normal paragraph in this page will be displayed</p>
-            <p id="p-footer">This is how the footer and some distintive paragraph will be displayed</p>
+        <h3>These fonts are applied with the purpose of showing proffessionality and a formal style for the Chamber of
+            Commerce.</h3>
+        <table>
+            <tr>
+                <th>Site Element</th>
+                <th>Size</th>
+                <th>Color</th>
+                <th>Sample Text</th>
+            </tr>
+
+            <tr>
+                <td>Primary Navigation</td>
+                <td>30px</td>
+                <td>#f9fafa</td>
+                <td>Sample</td>
+            </tr>
+            <tr>
+                <td>Footer Navigation</td>
+                <td>16px</td>
+                <td>#ffffff</td>
+                <td>Sample</td>
+            </tr>
+            <tr>
+                <td>Heading 1 (h1)</td>
+                <td>2em</td>
+                <td>#ffffff</td>
+                <td>Sample</td>
+            </tr>
+            <tr>
+                <td>Heading 2 (h2)</td>
+                <td>1.5em</td>
+                <td>#fcba03</td>
+                <td>Sample</td>
+            </tr>
+            <tr>
+                <td>Heading 3 (h3)</td>
+                <td>17.55px</td>
+                <td>#ffffff</td>
+                <td>Sample</td>
+            </tr>
+            <tr>
+                <td>Paragraph Text (p)</td>
+                <td>16px</td>
+                <td>#000000</td>
+                <td>Sample</td>
+            </tr>
+        </table>
+        <br>
+        <h4>FONTS: <br> <strong>Roboto Mono</strong> </h4>
+        <br>
+        <h1>(Chamber's name)</h1>
+        <p id="pri-nav">(Primary Navigation Prototype)</p>
+        <h2>Subtitle example</h2>
+        <h3>Description of the main section example</h3>
+        <p>This is how a normal paragraph in this page will be displayed</p>
+        <p id="p-footer">This is how the footer and some distintive paragraph will be displayed</p>
     </main>
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
     </footer>
     <script src="/wdd230/lesson3/scripts/index.js"></script>
 </body>
+
 </html>
