adding chamber and adjusting classes and links

--- a/lesson3/color-shceme.html
+++ b/lesson3/color-shceme.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-    <title>We'll Chamber</title>
+    <title>Argentine Chamber of Commerce</title>
 </head>
 
 <body>
     <header>
         <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
         <div class="name">
-            <h1>We'll Chamber</h1>
+            <h1>Argentine Chamber of Commerce</h1>
         </div>
     </header>
     <nav>
@@ -28,7 +28,7 @@
     </nav>
     <main class="color-sch-main">
         <h2>Color Scheme</h2>
-        <h3>These are the carefull selected elements for each color in the We'll Chamber Website</h3>
+        <h3>These are the carefull selected elements for each color in the Argentine Chamber of Commerce Website</h3>
         <table>
             <tr>
                 <th>Site Element</th>
