--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-    <title>We'll Chamber</title>
+    <title>Argentine Chamber of Commerce</title>
 </head>
 
 <body>
     <header>
         <img src="/wdd230/lesson3/images/logo.jpg" href="index.html" alt="Chamber logo">
         <div class="name">
-            <h1>We'll Chamber</h1>
+            <h1>Argentine Chamber of Commerce</h1>
         </div>
     </header>
     <nav>
@@ -46,7 +46,7 @@
             through networking. More people means more opportunities to innovate, reinvent and strengthen your business'
             status in the community. </p>
         <h2>Domain</h2>
-        <p>www.wellchamber.org</p>
+        <p>www.argchamber.org</p>
     </main>
     <footer>
         &copy;<span id="year"></span>|Josue B. Centurion|Argentina
