--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website to demonstrate design principles. It demonstrates 3 examples of companies that apply these principles.">
+    <meta name="description"
+        content="Website to demonstrate design principles. It demonstrates 3 examples of companies that apply these principles.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
