--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This website is a site-plan for a Chamber of Commerce called Let's Chamber. It includes the styles, typography and colors that will be included in this project. It also includes the Purpose and target-audience for this website." />
-    <link rel="stylesheet" href="/wdd230/lesson3/styles/small.css">
-    <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
+    <link rel="stylesheet" href="/lesson3/styles/small.css">
+    <link rel="stylesheet" href="/lesson3/styles/medium.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
     <title>Argentine Chamber of Commerce</title>
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="/wdd230/lesson3/images/logo.jpg" href="index.html" alt="Chamber logo">
+        <img src="/lesson3/images/logo.jpg" href="index.html" alt="Chamber logo">
         <div class="name">
             <h1>Argentine Chamber of Commerce</h1>
         </div>
