--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,9 +10,9 @@
         This project is part of an Assignment for the WDD230 Course at BYU Idaho - Online ( for the Web & Computer programming Certificate).
         It contains multiple pages, utilizing HTML, CSS, and Javascript. It's adapted to be responsive and support the most common browsers.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="/chamber/css/base.css">
-    <link rel="stylesheet" href="/chamber/css/medium.css">
-    <link rel="stylesheet" href="/chamber/css/large.css">
+    <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
+    <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
+    <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Argentine Chamber of Commerce</title>
 </head>
@@ -24,9 +24,9 @@
             <h1>Argentine Chamber of Commerce</h1>
         </div>
         <div class="icons">
-            <img src="/chamber/images/facebook.png" alt="facebook icon">
-            <img src="/chamber/images/instagram.png" alt="facebook icon">
-            <img src="/chamber/images/linkedin.png" alt="facebook icon">
+            <img src="/wdd230/chamber/images/facebook.png" alt="facebook icon">
+            <img src="/wdd230/chamber/images/instagram.png" alt="facebook icon">
+            <img src="/wdd230/chamber/images/linkedin.png" alt="facebook icon">
         </div>
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button>
