adjusting img size and updating html

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -93,7 +93,7 @@
 
         </div>
     </footer>
-    <script src="/chamber/js/scripts.js"></script>
+    <script src="/wdd230/chamber/js/scripts.js"></script>
 </body>
 
 </html>
