ADDING Large.css link

--- a/lesson3/color-shceme.html
+++ b/lesson3/color-shceme.html
@@ -8,6 +8,7 @@
     <meta name="description" content="This website is a site-plan for a Chamber of Commerce called Let's Chamber. It includes the styles, typography and colors that will be included in this project. It also includes the Purpose and target-audience for this website." />
     <link rel="stylesheet" href="/wdd230/lesson3/styles/small.css">
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
+        <link rel="stylesheet" href="/wdd230/lesson3/styles/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
     <title>Argentine Chamber of Commerce</title>
