--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,8 +28,12 @@
             <img src="/wdd230/chamber/images/instagram.png" alt="facebook icon">
             <img src="/wdd230/chamber/images/linkedin.png" alt="facebook icon">
         </div>
-        <nav>
-            <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button>
+        <div class="btn">    <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="current-date">
+            <p>Monday 22, November 2022</p>
+        </div>
+    </header>
+    <nav>
             <ul id="primaryNav">
                 <li><a href="#">Discover</a></li>
                 <li class="active"><a href="#">Directory</a></li>
@@ -37,10 +41,6 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <div class="current-date">
-            <p>Monday 22, November 2022</p>
-        </div>
-    </header>
     <main>
         <section>
             <p>Hero with site name and call to action</p>
