--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,39 +36,39 @@
             <img src="/wdd230/chamber/images/instagram.png" alt="facebook icon">
             <img src="/wdd230/chamber/images/linkedin.png" alt="facebook icon">
         </div>
-        <div class="btn">    <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
             <p>Monday 22, November 2022</p>
         </div>
     </header>
-    
+
     <main>
         <section>
-            <p>Hero with site name and call to action</p>
+            <h4>Hero with site name and call to action</h4>
         </section>
         <section>
-            <p>Event</p>
+            <h4>Event</h4>
         </section>
         <section>
-            <p>Weather</p>
+            <h4>Weather</h4>
         </section>
         <section>
-            <p>New Release</p>
+            <h4>New Release</h4>
         </section>
         <section>
             <div class="spotlight">
-                <p>spotlight 1 </p>
+                <h4>spotlight 1 </h4>
             </div>
             <div class="spotlight">
-                <p>spotlight 2</p>
+                <h4>spotlight 2</h4>
             </div>
             <div class="spotlight">
-                <p>spotlight 2</p>
+                <h4>spotlight 3</h4>
             </div>
         </section>
         <section>
-            <p>Join
-            <p>
+            <h4>Join
+                <h4>
         </section>
     </main>
     <footer>
@@ -90,7 +90,10 @@
         </div>
         <hr>
         <div class="footer-sub">
-            <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong>  WDD230 Project | <p id="updated"></p></p>
+            <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
+                Project | <p id="updated"></p>
+            </p>
+            </p>
 
         </div>
     </footer>
