optimazing images and improving html description

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="This is the Chamber of Commerce Website.
+        content="This is the Chamber of Commerce Website. It's a project assginment for the WDD230 Course at BYU - Idaho. In this project is applied the principle of responsiveness, white spaces, good contrast and consistency in design and layout, always willing to keep improving this website.
         This project is part of an Assignment for the WDD230 Course at BYU Idaho - Online ( for the Web & Computer programming Certificate).
         It contains multiple pages, utilizing HTML, CSS, and Javascript. It's adapted to be responsive and support the most common browsers.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -32,9 +32,9 @@
             </ul>
         </nav>
         <div class="icons">
-            <img src="/wdd230/chamber/images/facebook.png" alt="facebook icon">
-            <img src="/wdd230/chamber/images/instagram.png" alt="facebook icon">
-            <img src="/wdd230/chamber/images/linkedin.png" alt="facebook icon">
+            <img src="/wdd230/chamber/images/facebook.png" alt="Facebook icon">
+            <img src="/wdd230/chamber/images/instagram.png" alt="Instagram icon">
+            <img src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon">
         </div>
         <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
@@ -75,7 +75,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <img src="/wdd230/lesson3/images/logo-red.jpg" alt="">
+                    <img src="/wdd230/lesson3/images/logo-red.jpg" alt="Chamber logo">
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
