--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,14 +9,17 @@
         content="This is the Chamber of Commerce Website.
         This project is part of an Assignment for the WDD230 Course at BYU Idaho - Online ( for the Web & Computer programming Certificate).
         It contains multiple pages, utilizing HTML, CSS, and Javascript. It's adapted to be responsive and support the most common browsers.">
+
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Argentine Chamber of Commerce</title>
-</head>
 
+    <title>Argentine Chamber of Commerce</title>
+
+</head>
 <body>
     <header>
         <div class="name">
@@ -28,22 +31,28 @@
             <img src="/wdd230/chamber/images/instagram.png" alt="facebook icon">
             <img src="/wdd230/chamber/images/linkedin.png" alt="facebook icon">
         </div>
-        <div class="btn">    <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
             <p>Monday 22, November 2022</p>
         </div>
     </header>
     <nav>
-            <ul id="primaryNav">
-                <li><a href="#">Discover</a></li>
-                <li class="active"><a href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <ul id="primaryNav">
+            <li><a href="#">Discover</a></li>
+            <li class="active"><a href="#">Directory</a></li>
+            <li><a href="#">Join</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
     <main>
-        <section>
-            <p>Hero with site name and call to action</p>
+        <section class="hero-section">
+            <span class="welcome-message">
+                <h2>Welcome, We are Argentina</h2>
+            </span>
+            <span class="join-btn">
+                <h2>Join the Chamber</h2>
+            </span>
+            <img src="/wdd230/chamber/images/hero-image.jpg" alt="">
         </section>
         <section>
             <p>Event</p>
@@ -89,7 +98,10 @@
         </div>
         <hr>
         <div class="footer-sub">
-            <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong>  WDD230 Project | <p id="updated"></p></p>
+            <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
+                Project |
+            <p id="updated"></p>
+            </p>
 
         </div>
     </footer>
