--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,6 +20,7 @@
     <title>Argentine Chamber of Commerce</title>
 
 </head>
+
 <body>
     <header>
         <div class="name">
@@ -56,13 +57,29 @@
             <img src="/wdd230/chamber/images/hero-image.jpg" alt="">
         </section>
         <section>
-            <h4>Event</h4>
+            <h2>Ribbon Cutting</h2>
+            <h3>The diamond Shack 💎</h3>
+            <p>Join us for the grand opening of The Diamond Shack, Thursday at 1:00PM</p>
+            <p><a href="#"></a>more info...</p>
         </section>
         <section>
-            <h4>Weather</h4>
+            <h2>Weather</h2>
+            <div class="weather">
+                <img src="/wdd230/chamber/images/weather_icon.png" alt="">
+                <h3>62.51°F</h3>
+            </div>
+            <h4>CLEAR SKY</h4>
+            <hr>
+            <p>Wind Speed: 2.3mph </p>
+            <p>Wind Chill: N/A</p>
         </section>
         <section>
-            <h4>New Release</h4>
+            <h2>New Release</h2>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum."</p>
         </section>
         <section>
             <div class="spotlight">
@@ -101,7 +118,7 @@
         <div class="footer-sub">
             <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
                 Project | <p id="updated"></p>
-            
+
 
         </div>
     </footer>
