adding images, sections and improving general layout

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,9 +36,9 @@
             </ul>
         </nav>
         <div class="icons">
-            <img src="/wdd230/chamber/images/facebook.png" alt="Facebook icon">
-            <img src="/wdd230/chamber/images/instagram.png" alt="Instagram icon">
-            <img src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon">
+           <a href="https://www.facebook.com/" target="_blank"><img src="/wdd230/chamber/images/facebook.png" alt="Facebook icon"></a>
+           <a href="https://www.instagram.com/" target="_blank"> <img src="/wdd230/chamber/images/instagram.png" alt="Instagram icon"></a>
+            <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
         </div>
         <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
@@ -83,18 +83,40 @@
         </section>
         <section>
             <div class="spotlight">
-                <h4>spotlight 1 </h4>
+                <h2>Globant</h2>
+                <div class="images">
+                    <img src="/wdd230/chamber/images/globant.png" alt="">
+                </div>
+                <h4>Have Fun</h4>
+                <hr>
+                <p> https://www.globant.com </p>
+                <p><a href="https://www.globant.com/contact"> hi@globant.com</a></p>
             </div>
             <div class="spotlight">
-                <h4>spotlight 2</h4>
+                <h2>Mercado Libre</h2>
+                <div class="images">
+                    <img src="/wdd230/chamber/images/mercado_libre.png" alt="">
+                </div>
+
+                <h4>codo a codo, hasta que llegue lo mejor</h4>
+                <hr>
+                <p> https://mercadolibre.com/ </p>
+                <p><a href="https://investor.mercadolibre.com/contact-us">mercadolibre.com/contact-us</a></p>
             </div>
             <div class="spotlight">
-                <h4>spotlight 3</h4>
+                <h2>Le Utthe</h2>
+                <div class="images">
+                    <img src="/wdd230/chamber/images/le_utthe.png" alt="">
+                </div>
+                <h4>codo a codo, hasta que llegue lo mejor</h4>
+                <hr>
+                <p>Wind Speed: 2.3mph </p>
+                <p>Wind Chill: N/A</p>
             </div>
         </section>
-        <section>
-            <h4>Join
-            </h4>
+        <section class="join-us">
+            <button class="btn-2">Join Us! </button>
+            <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
         </section>
     </main>
     <footer>
@@ -117,7 +139,8 @@
         <hr>
         <div class="footer-sub">
             <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
-                Project | <p id="updated"></p>
+                Project |
+            <p id="updated"></p>
 
 
         </div>
