--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,8 +29,9 @@
         </div>
         <nav>
             <ul id="primaryNav">
+                  <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Discover</a></li>
-                <li class="active"><a href="#">Directory</a></li>
+                <li ><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
