--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -47,7 +47,8 @@
                 <p>Talking with some friends, He heard about the "diamond shack" event. He wants to know the details of
                     the event to be prepared. </p>
                 <p><strong>Quote:</strong></p>
-                <p>What kind of material will be reviewed in the meeting? What could be my goal to expand my career and contribute to the Chamber? How people will be dressed?</p>
+                <p>What kind of material will be reviewed in the meeting? What could be my goal to expand my career and
+                    contribute to the Chamber? How people will be dressed?</p>
 
             </div>
             <hr>
@@ -62,7 +63,8 @@
             </ul>
             <div class="description">
                 <p><strong>Visiting Purpose ( Website ) </strong></p>
-                <p>He wants to understand more about this online community. Get information about the resources this community offers. His Final intention is to join the Chamber. </p>
+                <p>He wants to understand more about this online community. Get information about the resources this
+                    community offers. His Final intention is to join the Chamber. </p>
                 <p><strong>Quote:</strong></p>
                 <p>Is it worth to join this community? What contribution can I offer to the Chamber? </p>
             </div>
@@ -71,11 +73,16 @@
             benefits </p> -->
         <!--         <p>General Person, male or female, ages 20-65 interested in knowing about Chamber benefits for the community</p> -->
         <h4>Scenarios</h4>
-        <p><strong>1)</strong> Interested in knowing more about businesses part of the chamber of commerce, will go to the directory section and review the businesses that appear.</p>
-        <p><strong>2)</strong> Wanting to be part of the Chamber, clicks on the join section and completes the form with his personal information.</p>
-        <p><strong>3)</strong> A bussiness owner looking for the news in this community, will click in the event section in the home page.Looking for "more info..."</p>
-        <p><strong>4)</strong> Interested in adding value to the community, will visit the contact page, with a subject referring to his potential contribution. </p>
-        <p><strong>5)</strong> A business owner is a new member of the community who desires to know about the resources available in the chamber, then visits the discover page. </p>
+        <p><strong>1)</strong> A business owner is a new member of the community who desires to know about the resources
+            available in the chamber, then visits the discover page. </p>
+        <p><strong>2)</strong> Wanting to be part of the Chamber, clicks on the join section and completes the form with
+            his personal information.</p>
+        <p><strong>3)</strong> A bussiness owner looking for the news in this community, will click in the event section
+            in the home page.Looking for "more info..."</p>
+        <p><strong>4)</strong> Interested in adding value to the community, will visit the contact page, with a subject
+            referring to his potential contribution. </p>
+        <p><strong>5)</strong> Interested in knowing more about businesses part of the chamber of commerce, will go to
+            the directory section and review the businesses that appear. </p>
 
     </main>
     <footer>
