--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -81,7 +81,7 @@
             in the home page.Looking for "more info..."</p>
         <p><strong>4)</strong> A Entrepreneur interested in adding value to the community, will visit the contact page, with a subject
             referring to his potential contribution. </p>
-        <p><strong>5)</strong> Interested in knowing more about businesses part of the chamber of commerce, will go to
+        <p><strong>5)</strong> A business owner interested in knowing more about businesses part of the chamber of commerce, will go to
             the directory section and review the businesses that appear. </p>
 
     </main>
