--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+    <div style="position:relative; ">
+          <div id="myDIV">
+            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <button onclick="myFunction()">Try it</button>
+</div>
     <header>
         <div class="name">
             <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
@@ -46,7 +51,7 @@
             <p>Monday 22, November 2022</p>
         </div>
     </header>
-
+</div>
     <main>
         <section class="hero-section">
             <span class="welcome-message">
