--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
     <div style="position:relative; ">
           <div id="myDIV">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
-            <button onclick="myFunction()">Try it</button>
+            <i onclick="myFunction()">❌</i>
 </div>
     <header>
         <div class="name">
